# Minesweeper

./: Cargo.toml  README.md  index.html  minesweeper-1e59d38f6adc0d75.js  minesweeper-34e1c8094d89c305.js  minesweeper-3c97c9e09af65dfe.js  minesweeper-6eb11d70b61e7e24.js  minesweeper-732ca18ab0f31ec5.js  minesweeper-ebf9d4ae55e042fe.js
.github/workflows/: ci.yml  deploy.yaml
legacy/: Cargo.toml  game.rs  generation.rs  lib.rs  loading.rs  main.rs
legacy/menu/: mod.rs  ui_camera.rs
src/: audio.rs  camera.rs  game.rs  generation.rs  input.rs  lib.rs  loading.rs  main.rs  menu.rs  parameters.rs  settings.rs
src/components/: coordinates.rs  covered.rs  marked.rs  mod.rs  uncover.rs
src/menu/: button_colours.rs  plugin.rs
src/parse/: json.rs
src/resources/: board.rs  game_camera.rs  mod.rs  tile.rs  tile_map.rs  ui_camera.rs
src/utility/: args.rs  bounds.rs  mod.rs
