[package]
name = "minesweeper"
version = "0.1.0"
authors = ["Freddy Wordingham"]
edition = "2021"
description = "Simulation playground"
repository = "https://github.com/FreddyWordingham/Minesweeper"
readme = "README.md"
license = "none"
keywords = ["simulation", "game", "bevy", "minesweeper"]
categories = ["simulation", "game"]
documentation = "https://docs.rs/crate/minesweeper"
exclude = ["assets/"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.7", default-features = false, features = ["render", "bevy_winit", "png"] }
bevy_kira_audio = { version = "0.10" }
bevy_asset_loader = { version = "0.11" }
rand = "0.8.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.7"
default-features = false
features = ["x11"]