[package]
name = "minesweeper"
version = "0.1.0"
authors = ["Freddy Wordingham"]
edition = "2021"
description = "Simulation playground"
repository = "https://github.com/FreddyWordingham/Minesweeper"
readme = "README.md"
license = "none"
keywords = ["simulation", "game", "bevy", "minesweeper"]
categories = ["simulation", "game"]
documentation = "https://docs.rs/crate/minesweeper"
exclude = ["assets/"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[features]
default = []
debug = ["bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.7", default-features = false, features = ["render", "bevy_winit", "png"] }
bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader", features = ["stageless"] }
bevy_kira_audio = { version = "0.10", features = ["ogg"] }
bevy-inspector-egui = { version = "0.11", optional = true }
rand = "0.8.3"
iyes_loopless = { git = "https://github.com/NiklasEi/iyes_loopless", branch = "loopless-schedule-ext-trait" }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.7"
default-features = false
features = ["x11"]

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.26", features=["x11"]}

[build-dependencies]
embed-resource = "1.4"
